logs/Slang/generated/hdlconv/hdlconvertor_p252.sv.log
name: hdlconvertor_p252
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p252.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p252.sv:2:1: error: expected member
alias {A[7:0],A[15:8],A[23:16],A[31:24]} = B;
^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p252.sv:7:1: error: expected member
alias W[7:0] = LSB;
^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p252.sv:8:1: error: expected member
alias W[31:24] = MSB;
^~~~~
